# requestcord

./: LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
examples/: Bypasses.py  Fetch.py  Headers.py  Tokeneditor.py
requestcord/: DiscordBypass.py  DiscordChange.py  DiscordFetch.py  DiscordHeaders.py  Logger.py  __init__.py  payloads.py
requestcord/common/: __init__.py  constants.py  models.py  response.py  types.py  utils.py
requestcord/sync_api/: __init__.py  client.py  http.py
requestcord/sync_api/actions/: __init__.py  boosts.py  forum.py  guilds.py  members.py  messages.py  reactions.py  threads.py  user.py
requestcord/utils/: __init__.py  headers.py
